--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -45,9 +45,9 @@
 
 %%%%% POCZĄTEK ZASADNICZEGO TEKSTU PRACY
 
-\chapter{Wprowadzenie}
-
-\ldots
+\chapter{Other vector implementations}
+\section{std::vector}
+In my benchmarks I have used glibc implementation of std::vector. 
 
 %%%%% BIBLIOGRAFIA
 
